--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="container">
             <div id="display">Uh, you turned me on!</div>
             <button class="operator"id="add">+</button>
-            <button class="operator"id="substract">-</button>
+            <button class="operator"id="subtract">-</button>
             <button class="operator"id="multiply">x</button>
             <button class="operator"id="divide">/</button>
             <button class="special"id="equals">=</button>
